examples/errors/vutcon_receive_timeout_invalid.vut
import vutcon at channel

let ch = channel()
ch.receive(timeout = "soon")
